fixed overflow

--- a/src/scss/header/header.scss
+++ b/src/scss/header/header.scss
@@ -162,7 +162,8 @@
 		}
 
 		&.opened {
-			overflow-y: auto;
+			overflow-y: scroll;
+			-webkit-overflow-scrolling: touch;
 			padding: 20px 0;
 			transition: opacity ease $tr;
 			opacity: 1;
